@@ -219,6 +219,7 @@ Version 1.1.0-CVS (?? ??? 2006)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Implemented PATCH 1442317: view_entry.php: Disable $proxy_fullname for LDAP users
     + RFE 1440366: Add a none option to Category Icons
     + Implemented Patch 1440975: Use category name as title for category icons
     + Upgraded UAC to allow users to grant permissions to their calendars
